--- a/app/app.html
+++ b/app/app.html
@@ -5,6 +5,9 @@
 
     <h2>{{title}}</h2>
 
+    <a [routerLink]="['Algo']">algo</a>
+
+    <router-outlet></router-outlet>
     <div>
         general foooter
     </div>
