fixed es6 errors

--- a/app/app.html
+++ b/app/app.html
@@ -3,11 +3,12 @@
         general header
     </div>
 
-    <h2>{{title}}</h2>
+    {{title}}
 
-    <a [routerLink]="['Algo']">algo</a>
+    <a [routerLink]="['About']">About</a>
 
     <router-outlet></router-outlet>
+
     <div>
         general foooter
     </div>
