Added form builder

--- a/app/app.html
+++ b/app/app.html
@@ -4,9 +4,8 @@
     </div>
 
     {{title}}
-
     <a [routerLink]="['About']">About</a>
-
+    <a [routerLink]="['Sort']">Sort</a>
     <router-outlet></router-outlet>
 
     <div>
