--- a/app/app.html
+++ b/app/app.html
@@ -1,14 +1,42 @@
-<div>
-    <div>
-        general header
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a [routerLink]="['About']">About</a></li>
+                <li><a [routerLink]="['Sort']">Sort</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
     </div>
+</nav>
 
-    {{title}}
-    <a [routerLink]="['About']">About</a>
-    <a [routerLink]="['Sort']">Sort</a>
+
+<!-- Begin page content -->
+<div class="container">
+    <div class="page-header">
+        <h1>Sticky footer with fixed navbar</h1>
+    </div>
     <router-outlet></router-outlet>
-
-    <div>
-        general foooter
-    </div>
 </div>
+
+<div class="container-fluid">
+
+
+</div>
+
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted">Place sticky footer content here.</p>
+    </div>
+</footer>
